# xhdf5

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  ford.md
.github/workflows/: blank.yml  main.yml
lib/: CMakeLists.txt  xhdf5.f90
lib/hdf5_wrappers/: hdf5_dataset_utils.F90  hdf5_datatype.F90  hdf5_file.F90  hdf5_group.f90  hdf5_read.F90  hdf5_write.F90
lib/utilities/: datainfo_utils.f90  mpi_utils.F90  os_utils.f90  os_utils.mod  trace.F90  trace.mod  xhdf5_error_handling.F90  xhdf5_globals.F90  xhdf5_globals.mod
src/: CMakeLists.txt  solhdf5.F90  xhdf5.F90.fypp
src/hdf5_wrappers/: hdf5_dataset.F90  hdf5_datatype.F90  hdf5_file.F90  hdf5_group.f90  hdf5_read.F90  hdf5_write.F90
src/templates/: read_numeric.inc  write_numeric.inc
src/utilities/: error_handling.F90  hdf5_globals.F90  hdf5_utils.f90  hyperslab.f90  mpi_utils.F90  os_utils.f90  path_utils.f90
test/: CMakeLists.txt  minimal_test.f90  os_utils_test.f90  solhdf5_file_utilities.f90  xhdf5_test.f90
test/src/: init_delete_file.F90  init_group_path_exists_delete_link.F90  minimal_test.F90  no_hdf5_behavior.F90  write_read_data.F90  write_read_numerical_matrix.F90  write_read_numerical_matrix.F90.fypp  write_read_numerical_scalar.F90  write_read_numerical_scalar.F90.fypp  write_read_numerical_vector.F90  write_read_numerical_vector.F90.fypp  write_read_string.F90
